--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chatgpt": "^5.2.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "openai": "^3.2.1",
     "pinia": "^2.0.36",
+    "uuid": "^9.0.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
